# monad-event-sdk-macos-compat

./: CMakeLists.txt  README.md
include/: fcntl.h  stdbit.h  string.h
include/monad_compat/common/: stdbit.h
lib/macos/: posix_fallocate.c
